[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["socket2", "macros", "rt-multi-thread", "net", "sync", "io-util"] }
shared = { path = "../shared", version = "0.1.0" }
helper = { path = "../helper", version = "0.1.0" }
shared-proc = { path = "../shared-proc", version = "0.1.0" }
